# SATySFi-bibtex-parser

./: README.md  Satyristes  satysfi-bibtex-parser-doc.opam  satysfi-bibtex-parser.opam
doc/: bibtex-parser-ja.saty
src/: bibtex-parser.satyg
