opam-version: "2.0"
name: "satysfi-bibtex-parser-doc"
version: "0.1.0"
synopsis: "Document of satysfi-bibtex-parser"
description: """
Document of satysfi-bibtex-parser.
satysfi-bibtex-parser: https://github.com/puripuri2100/satysfi-bibtex-parser
"""
maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT" # Choose what you want
homepage: "https://github.com/puripuri2100/satysfi-bibtex-parser"
dev-repo: "git+https://github.com/puripuri2100/satysfi-bibtex-parser.git"
bug-reports: "https://github.com/puripuri2100/satysfi-bibtex-parser/issues"
depends: [
  "satysfi" { >= "0.0.6" & < "1.0" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # You may want to include the corresponding library
  "satysfi-bibtex-parser" {= "%{version}%"}

  # Other libraries
  "satysfi-dist"
  "satysfi-base" {>= "1.6.0" & < "2.0"}
  "satysfi-code-printer" {>= "1.1.1" & < "2.0"}
]
build: [
  ["satyrographos" "opam" "build"
    "--name" "bibtex-parser-doc"
    "--prefix" "%{prefix}%"
    "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
    "--name" "bibtex-parser-doc"
    "--prefix" "%{prefix}%"
    "--script" "%{build}%/Satyristes"]
]